fix for column wrapping and button style inside columns

--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -43,7 +43,6 @@
 
 @media (min-width: 900px) {
   .columns > div {
-    align-items: flex-start;
     flex-direction: unset;
     gap: 32px;
     align-items: end;
